.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Location__c/fields/Invoice_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>