.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Location__c/fields/Invoice_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations (Invoice to Contact)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>